--- a/views/index.hbs
+++ b/views/index.hbs
@@ -18,7 +18,7 @@
         <nav>
           <div class="row">
             <ul class="main-nav">
-              <li><a href="#products">Produkte</a></li>
+              <li><a href="/products">Produkte</a></li>
               <li><a href="#blog">Unser Blog</a></li>
               <li><a href="/register">Registrieren</a></li>
               <li><a href="/login">Anmelden</a></li>
